--- a/el-carinito/src/components/no-auth/login.css
+++ b/el-carinito/src/components/no-auth/login.css
@@ -4,12 +4,15 @@
   align-items: center;
   grid-template-columns: 63% 37%;
   height: 834px;
+  max-width: 1194;
 }
 
 .inputsContainer {
   background-color: #923594;
   height: 834px;
-  display:flex;
+  width: 441px;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -18,6 +21,13 @@
   width: 204px;
   height: 52px;
   border-radius: 20px;
+}
+
+.emailContainer{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 63px
 }
 
 .inputLogin {
