--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -9,6 +9,7 @@
 .productsHeader {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     background-color: #F47923;
     padding: 20px;
     font-family: "Bayon", sans-serif;
@@ -16,20 +17,28 @@
 }
 .breakfastDish{
     display: grid;
-    grid-template-columns: 23% 65% 7%;
+    grid-template-columns: 25% 65% 10%;
     align-items: center;
+    padding: 5px; 
 }
 
-.breakfastDish > p{
-    width: 545px;
-    height: 72px; 
-    padding: 10px;
+.containerDish > p{
     font-family: "Inter", sans-serif;
+    font-size: 14px;
+}
+
+.containerDish>h3 {
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+}
+
+.containerDish{
+    margin-right: 10px;
 }
 
 .breakfastDish > img {
     width: 112px;
-    height: 72;
+    height: 72px;
     padding: 5px 5px;
 }
 
