--- a/src/components/confirm-ord.css
+++ b/src/components/confirm-ord.css
@@ -5,7 +5,7 @@
   background-color: #918f99;
   display: flex;
   flex-direction: column;
-  padding: 5px 30px;
+  padding: 10.5px 30px;
   font-family: "Bayon", sans-serif;
 }
 .title-ord-list {
@@ -27,12 +27,13 @@
   background-color: #eeecf7;
   border-radius: 10px;
   border: 0px;
+  text-align: center;
 }
 
 .resume {
   display: grid;
   grid-template-columns: 70% 30%;
-  height: 78px;
+  height: 83px;
   background: #e5e4e7;
   border: 1px solid #bdbcc2;
   font-family: "Inter", sans-serif;
@@ -86,6 +87,5 @@ span{
 .dishesContainer{
   background: #e5e4e7;
   height: 501px;
-  overflow: scroll;
-
+  overflow: auto;
 }
