--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -20,6 +20,8 @@
     grid-template-columns: 25% 65% 10%;
     align-items: center;
     padding: 5px; 
+    border-bottom: 1px solid;
+    border-bottom-color:  #F47923;
 }
 
 .containerDish > p{
@@ -42,3 +44,6 @@
     padding: 5px 5px;
 }
 
+.textUnderline:active{
+text-decoration: underline;
+}
