--- a/src/components/kitchen/orderInKitchen.css
+++ b/src/components/kitchen/orderInKitchen.css
@@ -17,8 +17,16 @@ width: 323px;
 height: 552px;
 margin: 40px;
 border-radius: 10px;
-border: 4px solid black; 
+border: 4px solid red; 
 font-size: 20px;
+}
+
+.command_yellow{
+  border: 4px solid yellow;
+}
+
+.command_green {
+  border: 4px solid green;
 }
 
 .headerOrder{
